# speexdsp

./: CMakeLists.txt
include/speex/: speex_jitter.h  speexdsp_types.h
libspeexdsp/: jitter.c  testjitter.c  testresample2.c
